set_source_groups()

set(interfaces_SRCS
AndValueInterfaceElement.cpp
AndValueInterfaceElement.h
ChrInterfaceElement.cpp
ChrInterfaceElement.h
CommentInterfaceElement.cpp
CommentInterfaceElement.h
DebugInterfaceElement.cpp
DebugInterfaceElement.h
EqualsValueInterfaceElement.cpp
EqualsValueInterfaceElement.h
FormattedNumberInterfaceElement.cpp
FormattedNumberInterfaceElement.h
GotoInterfaceElement.cpp
GotoInterfaceElement.h
IfThenElseInterfaceElement.cpp
IfThenElseInterfaceElement.h
IncludePageInterfaceElement.cpp
IncludePageInterfaceElement.h
Interface.cpp
Interface.h
InterfaceAdmin.cpp
InterfaceAdmin.h
InterfaceIdInterfaceElement.cpp
InterfaceIdInterfaceElement.h
InterfaceModule.cpp
InterfaceModule.gen.cpp
InterfaceModuleRegister.cpp
InterfaceModule.h
InterfaceModule.inc.cpp
InterfacePage.cpp
InterfacePage.h
InterfacePageAddAction.cpp
InterfacePageAddAction.h
InterfacePageAdmin.cpp
InterfacePageAdmin.h
InterfacePageException.cpp
InterfacePageException.h
InterfacePageTableSync.cpp
InterfacePageTableSync.h
InterfacePageUpdateAction.cpp
InterfacePageUpdateAction.h
InterfaceRight.cpp
InterfaceRight.h
InterfaceTableSync.cpp
InterfaceTableSync.h
InterfaceUpdateAction.cpp
InterfaceUpdateAction.h
LibraryInterfaceElement.cpp
LibraryInterfaceElement.h
LineLabelInterfaceElement.cpp
LineLabelInterfaceElement.h
LineMarkerInterfacePage.cpp
LineMarkerInterfacePage.h
LogicalAndInterfaceElement.cpp
LogicalAndInterfaceElement.h
LowerCaseInterfaceElement.cpp
LowerCaseInterfaceElement.h
NonPredefinedInterfacePage.cpp
NonPredefinedInterfacePage.h
ParameterValueInterfaceElement.cpp
ParameterValueInterfaceElement.h
PlainCharFilterValueInterfaceElement.cpp
PlainCharFilterValueInterfaceElement.h
PrintInterfaceElement.cpp
PrintInterfaceElement.h
RequestWithInterface.cpp
RequestWithInterface.h
ReservationRuleInterfacePage.cpp
ReservationRuleInterfacePage.h
SetInterfaceElement.cpp
SetInterfaceElement.h
StaticValueInterfaceElement.cpp
StaticValueInterfaceElement.h
StrLenInterfaceElement.cpp
StrLenInterfaceElement.h
SubstrValueInterfaceElement.cpp
SubstrValueInterfaceElement.h
SuperiorValueInterfaceElement.cpp
SuperiorValueInterfaceElement.h
Types.h
ValueElementList.cpp
ValueElementList.h
)

set_source_files_properties(InterfaceModule.gen.cpp InterfaceModule.inc.cpp PROPERTIES HEADER_FILE_ONLY 1)

add_library(11_interfaces ${interfaces_SRCS})

target_link_libraries(11_interfaces
  05_html
  10_db
  # Forward dependencies:
  #15_server
)

install(TARGETS 11_interfaces DESTINATION lib)
