set_source_groups()
set(server_SRCS
Action.h
ActionException.cpp
ActionException.h
ActionService.cpp
ActionService.hpp
BasicClient.cpp
BasicClient.h
CleanerThreadExec.cpp
CleanerThreadExec.h
ClientException.cpp
ClientException.h
DbModuleConfigTableSync.cpp
DbModuleConfigTableSync.h
DeviceTemplate.h
Device.h
Device.cpp
DevicesService.hpp
DevicesService.cpp
DynamicRequest.cpp
DynamicRequest.h
Function.cpp
Function.h
FunctionAPI.cpp
FunctionAPI.h
GlobalVariableUpdateAction.cpp
GlobalVariableUpdateAction.hpp
GlobalVariableUpdateService.cpp
GlobalVariableUpdateService.hpp
HardwareInformationService.cpp
HardwareInformationService.hpp
HtmlFormCalendarFieldInterfaceElement.cpp
HtmlFormCalendarFieldInterfaceElement.h
HtmlFormFieldInterfaceElement.cpp
HtmlFormFieldInterfaceElement.h
HtmlFormInterfaceElement.cpp
HtmlFormInterfaceElement.h
HTTPConnection.cpp
HTTPConnection.hpp
HTTPReply.cpp
HTTPReply.hpp
HTTPRequest.hpp
HTTPRequestParser.cpp
HTTPRequestParser.hpp
LoginAction.cpp
LoginAction.h
LoginInterfacePage.cpp
LoginInterfacePage.h
LogoutAction.cpp
LogoutAction.h
MemoryStatisticsAdmin.cpp
MemoryStatisticsAdmin.hpp
ModuleClass.cpp
ModuleClass.h
ModuleClassTemplate.hpp
ModuleException.h
PermanentThread.hpp
PermanentThread.cpp
PermanentThreadsService.hpp
PermanentThreadsService.cpp
PermanentThreadTableSync.hpp
PermanentThreadTableSync.cpp
Poller.hpp
Poller.cpp
QuitAction.cpp
QuitAction.hpp
RedirectService.cpp
RedirectService.hpp
Request.cpp
Request.h
RequestException.cpp
RequestException.h
ServerAdminRight.cpp
ServerAdminRight.h
ServerConstants.h
ServerModule.cpp
ServerModule.gen.cpp
ServerModuleRegister.cpp
ServerModule.h
ServerModule.inc.cpp
ServerModuleException.cpp
ServerModuleException.h
ServerModuleVersionInterfaceElement.cpp
ServerModuleVersionInterfaceElement.h
ServerTypes.h
Session.cpp
Session.h
SessionException.cpp
SessionException.h
SessionService.cpp
SessionService.hpp
SessionsListService.cpp
SessionsListService.hpp
SetSessionVariableAction.cpp
SetSessionVariableAction.hpp
StaticActionFunctionRequest.h
StaticActionRequest.h
StaticFunctionRequest.h
SYNTHESEInformationService.cpp
SYNTHESEInformationService.hpp
ThreadKillAction.cpp
ThreadKillAction.h
ThreadsAdmin.cpp
ThreadsAdmin.h
ValidSessionInterfaceElement.cpp
ValidSessionInterfaceElement.h
version.h.in
VersionService.cpp
VersionService.hpp
XMLSessionFunction.cpp
XMLSessionFunction.h
XMLSessionIsValidFunction.cpp
XMLSessionIsValidFunction.h
)

set_source_files_properties(ServerModule.gen.cpp ServerModule.inc.cpp PROPERTIES HEADER_FILE_ONLY 1)

add_library(15_server ${server_SRCS})

target_link_libraries(15_server
  01_util
  05_html
  10_db
  11_interfaces
  12_security
  13_dblog
  14_admin
)

# Explicitly say that the executable depends on custom svn target
add_dependencies(15_server revisiontag)

install(TARGETS 15_server DESTINATION lib)
