
set(messages_SRCS
AddScenarioAction.cpp
AddScenarioAction.h
Alarm.cpp
Alarm.h
AlarmAddLinkAction.cpp
AlarmAddLinkAction.h
AlarmObjectLink.cpp
AlarmObjectLink.h
AlarmObjectLinkException.cpp
AlarmObjectLinkException.h
AlarmObjectLinkTableSync.cpp
AlarmObjectLinkTableSync.h
AlarmRecipient.cpp
AlarmRecipient.h
AlarmRecipientTemplate.h
AlarmRemoveLinkAction.cpp
AlarmRemoveLinkAction.h
AlarmTableSync.cpp
AlarmTableSync.h
AlarmTemplate.cpp
AlarmTemplate.h
AlarmTemplateInheritedTableSync.cpp
AlarmTemplateInheritedTableSync.h
GetMessagesFunction.cpp
GetMessagesFunction.hpp
MessageAdmin.cpp
MessageAdmin.h
MessagesAdmin.cpp
MessagesAdmin.h
MessagesAdvancedSelectTableSync.cpp
MessagesAdvancedSelectTableSync.h
MessagesLibraryAdmin.cpp
MessagesLibraryAdmin.h
MessagesLibraryLog.cpp
MessagesLibraryLog.h
MessagesLibraryRight.cpp
MessagesLibraryRight.h
MessagesLog.cpp
MessagesLog.h
MessagesModule.cpp
MessagesModule.h
MessagesObjectsCMSExporters.cpp
MessagesObjectsCMSExporters.hpp
MessagesRight.cpp
MessagesRight.h
MessagesScenarioAdmin.cpp
MessagesScenarioAdmin.h
MessagesTemplateLibraryAdmin.cpp
MessagesTemplateLibraryAdmin.h
MessagesTypes.h
NewMessageAction.cpp
NewMessageAction.h
Scenario.cpp
Scenario.h
ScenarioDisplayFunction.cpp
ScenarioDisplayFunction.hpp
ScenarioFolder.cpp
ScenarioFolder.h
ScenarioFolderAdd.cpp
ScenarioFolderAdd.h
ScenarioFolderTableSync.cpp
ScenarioFolderTableSync.h
ScenarioFolderUpdateAction.cpp
ScenarioFolderUpdateAction.h
ScenarioSaveAction.cpp
ScenarioSaveAction.h
ScenarioSentAlarmInheritedTableSync.cpp
ScenarioSentAlarmInheritedTableSync.h
ScenariosListFunction.cpp
ScenariosListFunction.hpp
ScenarioStopAction.cpp
ScenarioStopAction.h
ScenarioTableSync.cpp
ScenarioTableSync.h
ScenarioTemplate.cpp
ScenarioTemplate.h
ScenarioTemplateInheritedTableSync.cpp
ScenarioTemplateInheritedTableSync.h
SentAlarm.cpp
SentAlarm.h
SentScenario.cpp
SentScenario.h
SentScenarioInheritedTableSync.cpp
SentScenarioInheritedTableSync.h
SimpleMessageCreationAction.cpp
SimpleMessageCreationAction.hpp
TextTemplate.cpp
TextTemplate.h
TextTemplateAddAction.cpp
TextTemplateAddAction.h
TextTemplateFolderUpdateAction.cpp
TextTemplateFolderUpdateAction.h
TextTemplateTableSync.cpp
TextTemplateTableSync.h
UpdateAlarmMessagesAction.cpp
UpdateAlarmMessagesAction.h
UpdateAlarmMessagesFromTemplateAction.cpp
UpdateAlarmMessagesFromTemplateAction.h
UpdateTextTemplateAction.cpp
UpdateTextTemplateAction.h
)

add_library(17_messages ${messages_SRCS})

target_link_libraries(17_messages
  12_security
  # Forward dependencies:
  #36_cms
)

install(TARGETS 17_messages DESTINATION lib)
