
set(calendar_SRCS
Calendar.cpp
Calendar.h
CalendarDateInterfacePage.cpp
CalendarDateInterfacePage.hpp
CalendarHTMLViewer.h
CalendarModule.cpp
CalendarModule.h
CalendarRight.cpp
CalendarRight.h
CalendarTemplate.cpp
CalendarTemplate.h
CalendarTemplateAddAction.cpp
CalendarTemplateAddAction.h
CalendarTemplateAdmin.cpp
CalendarTemplateAdmin.h
CalendarTemplateCleanAction.cpp
CalendarTemplateCleanAction.hpp
CalendarTemplateElement.cpp
CalendarTemplateElement.h
CalendarTemplateElementAddAction.cpp
CalendarTemplateElementAddAction.h
CalendarTemplateElementRemoveAction.cpp
CalendarTemplateElementRemoveAction.h
CalendarTemplateElementTableSync.cpp
CalendarTemplateElementTableSync.h
CalendarTemplatePropertiesUpdateAction.cpp
CalendarTemplatePropertiesUpdateAction.h
CalendarTemplateRemoveAction.cpp
CalendarTemplateRemoveAction.hpp
CalendarTemplatesAdmin.cpp
CalendarTemplatesAdmin.h
CalendarTemplatesListFunction.cpp
CalendarTemplatesListFunction.hpp
CalendarTemplateTableSync.cpp
CalendarTemplateTableSync.h
)

add_library(31_calendar ${calendar_SRCS})

install(TARGETS 31_calendar DESTINATION lib)
