
set(pt_SRCS
AdvancedSelectTableSync.cpp
AdvancedSelectTableSync.h
AreaGeneratedLineStop.cpp
AreaGeneratedLineStop.hpp
CarPostalFileFormat.cpp
CarPostalFileFormat.hpp
CheckLineCalendarFunction.cpp
CheckLineCalendarFunction.hpp
CleanAllStopPointProjectionsAction.cpp
CleanAllStopPointProjectionsAction.hpp
CommercialLine.cpp
CommercialLine.h
CommercialLineAddAction.cpp
CommercialLineAddAction.h
CommercialLineAdmin.cpp
CommercialLineAdmin.h
CommercialLineCalendarTemplateUpdateAction.cpp
CommercialLineCalendarTemplateUpdateAction.hpp
CommercialLineTableSync.cpp
CommercialLineTableSync.h
CommercialLineUpdateAction.cpp
CommercialLineUpdateAction.h
ContinuousService.cpp
ContinuousService.h
ContinuousServiceTableSync.cpp
ContinuousServiceTableSync.h
ContinuousServiceUpdateAction.cpp
ContinuousServiceUpdateAction.h
CopyGeometriesAction.cpp
CopyGeometriesAction.hpp
DesignatedLinePhysicalStop.cpp
DesignatedLinePhysicalStop.hpp
DesignatedLinePhysicalStopInheritedTableSync.cpp
DesignatedLinePhysicalStopInheritedTableSync.hpp
Destination.cpp
Destination.hpp
DestinationTableSync.cpp
DestinationTableSync.hpp
DRTArea.cpp
DRTArea.hpp
DRTAreaAdmin.cpp
DRTAreaAdmin.hpp
DRTAreasAdmin.cpp
DRTAreasAdmin.hpp
DRTAreaTableSync.cpp
DRTAreaTableSync.hpp
DRTAreaUpdateAction.cpp
DRTAreaUpdateAction.hpp
EnvironmentSyncException.cpp
EnvironmentSyncException.h
Fare.cpp
Fare.h
FareAdmin.cpp
FareAdmin.h
FaresAdmin.cpp
FaresAdmin.h
FareTableSync.cpp
FareTableSync.h
GTFSFileFormat.cpp
GTFSFileFormat.hpp
HeuresFileFormat.cpp
HeuresFileFormat.hpp
IneoFileFormat.cpp
IneoFileFormat.hpp
JourneyPattern.cpp
JourneyPattern.hpp
JourneyPatternAddAction.cpp
JourneyPatternAddAction.hpp
JourneyPatternAdmin.cpp
JourneyPatternAdmin.hpp
JourneyPatternCopy.cpp
JourneyPatternCopy.hpp
JourneyPatternTableSync.cpp
JourneyPatternTableSync.hpp
JourneyPatternUpdateAction.cpp
JourneyPatternUpdateAction.hpp
Junction.cpp
Junction.hpp
JunctionStop.cpp
JunctionStop.hpp
JunctionTableSync.cpp
JunctionTableSync.hpp
JunctionUpdateAction.cpp
JunctionUpdateAction.hpp
LineArea.cpp
LineArea.hpp
LineAreaInheritedTableSync.cpp
LineAreaInheritedTableSync.hpp
LineMarkerInterfacePage.cpp
LineMarkerInterfacePage.h
LinePhysicalStop.cpp
LinePhysicalStop.hpp
LinesListFunction.cpp
LinesListFunction.h
LineStop.cpp
LineStop.h
LineStopAddAction.cpp
LineStopAddAction.h
LineStopTableSync.cpp
LineStopTableSync.h
LineStopUpdateAction.cpp
LineStopUpdateAction.hpp
NetworkLineBasedRight.cpp
NetworkLineBasedRight.h
NonConcurrencyRule.cpp
NonConcurrencyRule.h
NonConcurrencyRuleAddAction.cpp
NonConcurrencyRuleAddAction.h
NonConcurrencyRuleTableSync.cpp
NonConcurrencyRuleTableSync.h
NonPermanentService.cpp
NonPermanentService.h
OGTFileFormat.cpp
OGTFileFormat.hpp
PhysicalStopsCSVExportFunction.cpp
PhysicalStopsCSVExportFunction.h
PladisStopsFileFormat.cpp
PladisStopsFileFormat.hpp
ProjectAllStopPointsAction.cpp
ProjectAllStopPointsAction.hpp
PTCitiesAdmin.cpp
PTCitiesAdmin.h
PTConstants.h
PTDataCleanerFileFormat.cpp
PTDataCleanerFileFormat.hpp
PTFileFormat.cpp
PTFileFormat.hpp
PTModule.cpp
PTModule.h
PTNetworkListItemInterfacePage.cpp
PTNetworkListItemInterfacePage.hpp
PTNetworksAdmin.cpp
PTNetworksAdmin.h
PTNetworksListFunction.cpp
PTNetworksListFunction.hpp
PTObjectInformationFunction.cpp
PTObjectInformationFunction.hpp
PTObjectsCMSExporters.cpp
PTObjectsCMSExporters.hpp
PTPlaceAdmin.cpp
PTPlaceAdmin.h
PTPlacesAdmin.cpp
PTPlacesAdmin.h
PTQualityControlAdmin.cpp
PTQualityControlAdmin.hpp
PTRoadAdmin.cpp
PTRoadAdmin.h
PTRoadsAdmin.cpp
PTRoadsAdmin.h
PTRouteDetailFunction.cpp
PTRouteDetailFunction.hpp
PTRoutesListFunction.cpp
PTRoutesListFunction.hpp
PTRuleUserAdmin.hpp
PTUseRule.cpp
PTUseRule.h
PTUseRuleAdmin.cpp
PTUseRuleAdmin.h
PTUseRulesAdmin.cpp
PTUseRulesAdmin.h
PTUseRuleTableSync.cpp
PTUseRuleTableSync.h
PTUseRuleUpdateAction.cpp
PTUseRuleUpdateAction.hpp
RealTimeUpdateFunction.cpp
RealTimeUpdateFunction.h
RealTimeUpdateScreenServiceInterfacePage.cpp
RealTimeUpdateScreenServiceInterfacePage.h
ReservationContact.cpp
ReservationContact.h
ReservationContactTableSync.cpp
ReservationContactTableSync.h
ReservationRuleInterfacePage.cpp
ReservationRuleInterfacePage.h
RollingStock.cpp
RollingStock.h
RollingStockAdmin.cpp
RollingStockAdmin.h
RollingStocksAdmin.cpp
RollingStocksAdmin.h
RollingStockTableSync.cpp
RollingStockTableSync.h
ScheduledService.cpp
ScheduledService.h
ScheduledServiceTableSync.cpp
ScheduledServiceTableSync.h
ScheduleRealTimeUpdateAction.cpp
ScheduleRealTimeUpdateAction.h
SchedulesBasedService.cpp
SchedulesBasedService.h
ServiceAddAction.cpp
ServiceAddAction.h
ServiceAdmin.cpp
ServiceAdmin.h
ServiceApplyCalendarAction.cpp
ServiceApplyCalendarAction.h
ServiceDateChangeAction.cpp
ServiceDateChangeAction.h
ServiceTimetableUpdateAction.cpp
ServiceTimetableUpdateAction.h
ServiceUpdateAction.cpp
ServiceUpdateAction.h
ServiceVertexRealTimeUpdateAction.cpp
ServiceVertexRealTimeUpdateAction.h
StopArea.cpp
StopArea.hpp
StopAreaAddAction.cpp
StopAreaAddAction.h
StopAreasListFunction.cpp
StopAreasListFunction.hpp
StopAreaTableSync.cpp
StopAreaTableSync.hpp
StopAreaTransferAddAction.cpp
StopAreaTransferAddAction.h
StopAreaTransferRemoveAction.cpp
StopAreaTransferRemoveAction.hpp
StopAreaUpdateAction.cpp
StopAreaUpdateAction.h
StopPoint.cpp
StopPoint.hpp
StopPointAddAction.cpp
StopPointAddAction.hpp
StopPointAdmin.cpp
StopPointAdmin.hpp
StopPointsListFunction.cpp
StopPointsListFunction.hpp
StopPointTableSync.cpp
StopPointTableSync.hpp
StopPointUpdateAction.cpp
StopPointUpdateAction.hpp
StopPointWFSType.cpp
StopPointWFSType.hpp
TransportNetwork.cpp
TransportNetwork.h
TransportNetworkAdmin.cpp
TransportNetworkAdmin.h
TransportNetworkRight.cpp
TransportNetworkRight.h
TransportNetworkTableSync.cpp
TransportNetworkTableSync.h
TransportNetworkUpdateAction.cpp
TransportNetworkUpdateAction.hpp
TridentFileFormat.cpp
TridentFileFormat.h
XmlBuilder.cpp
XmlBuilder.h
)

add_library(35_pt ${pt_SRCS})

target_link_libraries(35_pt
  00_framework
  01_util
  10_db
  11_interfaces
  12_security
  16_impex
  17_messages
  18_graph
  31_calendar
  32_geography
  33_algorithm
  34_road
  # Forward dependencies:
  #36_cms
  #39_map
)

install(TARGETS 35_pt DESTINATION lib)
