
set(cms_SRCS
AndFunction.cpp
AndFunction.hpp
BitAndFunction.cpp
BitAndFunction.hpp
ChrFunction.cpp
ChrFunction.hpp
CMSModule.cpp
CMSModule.hpp
CMSRight.cpp
CMSRight.hpp
DateService.cpp
DateService.hpp
DateTimeInterfacePage.cpp
DateTimeInterfacePage.h
EqualFunction.cpp
EqualFunction.hpp
EvalService.cpp
EvalService.hpp
FunctionWithSite.h
FunctionWithSiteBase.cpp
FunctionWithSiteBase.hpp
IfFunction.cpp
IfFunction.hpp
LanguageSelectorService.cpp
LanguageSelectorService.hpp
OrService.cpp
OrService.hpp
StrLenFunction.cpp
StrLenFunction.hpp
SubstractFunction.cpp
SubstractFunction.hpp
SubStrFunction.cpp
SubStrFunction.hpp
SuperiorFunction.cpp
SuperiorFunction.hpp
Webpage.cpp
Webpage.h
WebPageAddAction.cpp
WebPageAddAction.h
WebPageAdmin.cpp
WebPageAdmin.h
WebPageDisplayFunction.cpp
WebPageDisplayFunction.h
WebPageFormFunction.cpp
WebPageFormFunction.hpp
WebPageInterfacePage.cpp
WebPageInterfacePage.h
WebPageLastNewsFunction.cpp
WebPageLastNewsFunction.hpp
WebPageLinkAddAction.cpp
WebPageLinkAddAction.hpp
WebPageLinkFunction.cpp
WebPageLinkFunction.hpp
WebPageLinkRemoveAction.cpp
WebPageLinkRemoveAction.hpp
WebPageLinksFunction.cpp
WebPageLinksFunction.hpp
WebPageMenuFunction.cpp
WebPageMenuFunction.hpp
WebPageMoveAction.cpp
WebPageMoveAction.hpp
WebpageNextFunction.cpp
WebpageNextFunction.hpp
WebPagePositionFunction.cpp
WebPagePositionFunction.hpp
WebpagePreviousFunction.cpp
WebpagePreviousFunction.hpp
WebPageTableSync.cpp
WebPageTableSync.h
WebPageUpdateAction.cpp
WebPageUpdateAction.h
Website.cpp
Website.hpp
)

add_library(36_cms ${cms_SRCS})

target_link_libraries(36_cms
  12_security
  15_server
  20_tree
)

install(TARGETS 36_cms DESTINATION lib)
