set_source_groups()

set(cms_SRCS
AddService.cpp
AddService.hpp
AndFunction.cpp
AndFunction.hpp
BitAndFunction.cpp
BitAndFunction.hpp
ChrFunction.cpp
ChrFunction.hpp
CMSModule.cpp
CMSModule.gen.cpp
CMSModuleRegister.cpp
CMSModule.hpp
CMSModule.inc.cpp
CMSRight.cpp
CMSRight.hpp
DateService.cpp
DateService.hpp
DateTimeInterfacePage.cpp
DateTimeInterfacePage.h
EqualFunction.cpp
EqualFunction.hpp
EvalService.cpp
EvalService.hpp
FunctionWithSite.h
FunctionWithSiteBase.cpp
FunctionWithSiteBase.hpp
IfFunction.cpp
IfFunction.hpp
LanguageSelectorService.cpp
LanguageSelectorService.hpp
NotService.cpp
NotService.hpp
OrService.cpp
OrService.hpp
RowsListFunction.cpp
RowsListFunction.hpp
StrLenFunction.cpp
StrLenFunction.hpp
SubstractFunction.cpp
SubstractFunction.hpp
SubStrFunction.cpp
SubStrFunction.hpp
SuperiorFunction.cpp
SuperiorFunction.hpp
Webpage.cpp
Webpage.h
WebPageAddAction.cpp
WebPageAddAction.h
WebPageAdmin.cpp
WebPageAdmin.h
WebpageContent.cpp
WebpageContent.hpp
WebPageDisplayFunction.cpp
WebPageDisplayFunction.h
WebPageFormFunction.cpp
WebPageFormFunction.hpp
WebPageLastNewsFunction.cpp
WebPageLastNewsFunction.hpp
WebPageLinkAddAction.cpp
WebPageLinkAddAction.hpp
WebPageLinkFunction.cpp
WebPageLinkFunction.hpp
WebPageLinkRemoveAction.cpp
WebPageLinkRemoveAction.hpp
WebPageLinksFunction.cpp
WebPageLinksFunction.hpp
WebPageMenuFunction.cpp
WebPageMenuFunction.hpp
WebPageMoveAction.cpp
WebPageMoveAction.hpp
WebpageNextFunction.cpp
WebpageNextFunction.hpp
WebPagePositionFunction.cpp
WebPagePositionFunction.hpp
WebpagePreviousFunction.cpp
WebpagePreviousFunction.hpp
WebPageTableSync.cpp
WebPageTableSync.h
WebPageUpdateAction.cpp
WebPageUpdateAction.h
Website.cpp
Website.hpp
WebsiteAdmin.cpp
WebsiteAdmin.hpp
WebsiteTableSync.cpp
WebsiteTableSync.hpp
WebsiteUpdateAction.cpp
WebsiteUpdateAction.hpp
)

set_source_files_properties(CMSModule.gen.cpp CMSModule.inc.cpp PROPERTIES HEADER_FILE_ONLY 1)

add_library(36_cms ${cms_SRCS})

target_link_libraries(36_cms
  12_security
  15_server
  20_tree
  # Forward dependencies:
  #56_pt_website
)

install(TARGETS 36_cms DESTINATION lib)
